app_k8s/web-color.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-color
  labels:
    app: web-color
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-color
  template:
    metadata:
      labels:
        app: web-color
    spec:
      containers:
      - name: web-color
        image: kodekloud/webapp-color:v1
        ports:
        - containerPort: 80
