app_k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-color-service
spec:
  type: ClusterIP
  selector:
    app: web-color
  ports:
  - name: http
    port: 80
    targetPort: 8080
